--- a/client/src/components/ItemMenu/style.css
+++ b/client/src/components/ItemMenu/style.css
@@ -8,5 +8,14 @@
     width: 125px;
     height: 125px;
     margin: 2.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    align-content: center;
+    box-shadow: 5px 5px #333333;
+}
+.menuItem p {
+    color: #333333;
+    font-size: 20px;
 }
