--- a/client/src/components/ItemMenu/style.css
+++ b/client/src/components/ItemMenu/style.css
@@ -3,6 +3,12 @@
     flex-wrap: wrap;
     padding-top: 10px;
     justify-content: center;
+    position: absolute;
+    top: 275px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 2;
 }
 .menuItem {
     width: 125px;
