--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #333333;
 }
 a {
     text-decoration: none;
@@ -24,3 +25,4 @@ button:hover {
 h1 {
     margin: 10px;
 }
+
