--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: sans-serif;
     color: #333333;
 }
 a {
